--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
             android:name=".DetailActivity"
             android:label="@string/title_activity_detail"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+        
+        <provider
+            android:authorities="${applicationId}.provider"
+            android:name=".MagicTheGatheringContentProvider"
+            android:exported="false" />
     </application>
 
 </manifest>
